[package]
name = "rmon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.14", features = [ "headers" ] }
futures = "0.3"
async-stream = "0.3.5"
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
sysinfo = "0.28.4"
serde_json = "1.0.93"
serde = { version = "1.0.160", features = ["derive"] }
